spikes/spike-o/digests/guard-wrong-buffer-arm64.stderr
     Locking 1 package to latest compatible version
   Compiling compiler_builtins v0.1.160 (/root/.rustup/toolchains/nightly-2025-08-01-aarch64-unknown-linux-gnu/lib/rustlib/src/rust/library/compiler-builtins/compiler-builtins)
   Compiling core v0.0.0 (/root/.rustup/toolchains/nightly-2025-08-01-aarch64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
   Compiling panic_abort v0.0.0 (/root/.rustup/toolchains/nightly-2025-08-01-aarch64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_abort)
   Compiling blyt32 v0.1.0 (/spike-o/sdk/blyt32)
warning: unstable feature specified for `-Ctarget-feature`: `f`
  |
  = note: this feature is not stably supported; its behavior can change in the future

warning: unstable feature specified for `-Ctarget-feature`: `d`
  |
  = note: this feature is not stably supported; its behavior can change in the future

warning: `blyt32` (lib) generated 2 warnings
   Compiling guard_wrong_buffer v0.1.0 (/spike-o/guard_wrong_buffer)
error[E0308]: mismatched types
  --> src/lib.rs:30:33
   |
30 |     EnemiesBuffer.set_u32(slot, S_CTR, 42);
   |                   -------       ^^^^^ expected `FieldHandle<EnemiesBuffer>`, found `FieldHandle<MainBuffer>`
   |                   |
   |                   arguments to this method are incorrect
   |
   = note: expected struct `FieldHandle<EnemiesBuffer>`
              found struct `FieldHandle<MainBuffer>`
note: method defined here
  --> /spike-o/sdk/blyt32/src/buffers.rs:70:12
   |
70 |     pub fn set_u32(&self, slot: Slot, field: FieldHandle<EnemiesBuffer>, val: u32) {
   |            ^^^^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `guard_wrong_buffer` (lib) due to 1 previous error
